<resources>
    <string name="RP_to_chat">РП</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Принять</string>
    <string name="account_recovery_description">Выберите способ получения нового пароля для вашего аккаунта</string>
    <string name="account_recovery_method">Способ восстановления</string>
    <string name="account_recovery_no_account">У вас нет аккаунта?</string>
    <string name="account_recovery_register">Регистрация</string>
    <string name="account_recovery_title">Сброс пароля</string>
    <string name="account_recovery_update_password">Обновить пароль</string>
    <string name="action">Действия</string>
    <string name="action_default_description">Выполнение чего-либо</string>
    <string name="actually_version">Актуальная версия</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="all">Все</string>
    <string name="all_list">Весь список</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation_categories_title">Категории</string>
    <string name="animation_favorites">Избранное</string>
    <string name="animation_list_title">Список анимаций</string>
    <string name="another_variant">Другой вариант</string>
    <string name="ap_2022_claim_award_congrats">Поздравляем! Вы получили</string>
    <string name="ap_2022_claim_award_name_sample">Ларец новичка</string>
    <string name="ap_2022_claim_award_sell_for_50_az_coin">Продать за 50 AZ-coin</string>
    <string name="ap_2022_claim_award_take_to_inventory">Забрать в инвентарь</string>
    <string name="ap_notification_enter_mm">Введите /mm чтобы узнать подробнее</string>
    <string name="ap_shop_balance">Баланс</string>
    <string name="ap_shop_shop">Магазин</string>
    <string name="apartment">квартира</string>
    <string name="app_name">ARIZONA ONLINE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_phase_downloading">Скачивание файлов...</string>
    <string name="archive_phase_extracting">Распаковка файлов...</string>
    <string name="archive_phase_installing">Установка файлов...</string>
    <string name="archive_phase_verifying">Проверка загруженных файлов...</string>
    <string name="archive_phase_waiting_for_network">Ожидание подключения...</string>
    <string name="arizona_currency">ARIZONA (AARRP)</string>
    <string name="arizona_mini_game_search_document_description_txt">Найдите налоговые документы в конвертах</string>
    <string name="arizona_mini_game_search_document_title_txt">Поиск документов</string>
    <string name="arizona_rent">ARIZONA\nRENT</string>
    <string name="asc">ASC</string>
    <string name="auction_bid_hint_az">2 000 AZ</string>
    <string name="auction_bid_hint_cash">10 000 $</string>
    <string name="auction_cannot_bid_now">Сейчас нельзя делать ставки!</string>
    <string name="auction_demon_mask">Маска демона</string>
    <string name="auction_enter_bid_amount">Введите сумму ставки</string>
    <string name="auction_finished_cannot_bid">Аукцион окончен, сделать ставку нельзя!</string>
    <string name="auction_for_container">Аукцион за контейнер</string>
    <string name="auction_last_bid">Последняя ставка</string>
    <string name="auction_new_bid_must_be_higher">Новая ставка должна быть выше текущей!</string>
    <string name="auction_not_held">Аукцион не проводится</string>
    <string name="auction_ordinary_container">Обычный контейнер</string>
    <string name="auction_possible_contents">Возможное содержимое</string>
    <string name="auction_start_label">Начало</string>
    <string name="auction_start_time">Начало: %1$d:00</string>
    <string name="auction_starting_price">Начальная цена</string>
    <string name="auction_time_left">Времени осталось</string>
    <string name="auth_account_not_registered">Данный аккаунт не зарегистрирован.</string>
    <string name="auth_connecting_in_seconds">Подключение через %1$d сек</string>
    <string name="auth_invalid_credentials">Неправильный логин или пароль. Попробуйте еще раз.</string>
    <string name="auth_password_allowed_characters">В пароле доступны только русские буквы А-Я и а-я, латинские буквы A-Z и a-z, а также цифры 0-9!</string>
    <string name="auth_password_length_error">Пароль не может быть короче 6 и длиннее 32 символов.</string>
    <string name="auth_player_already_in_game">Игрок уже в игре.</string>
    <string name="auth_required_nickname_for_password_reset">Необходимо ввести никнейм в поле авторизации для сброса пароля.</string>
    <string name="auth_surname_latin_only">Фамилия пользователя должна состоять только из латинских букв</string>
    <string name="auth_username_latin_only">Имя пользователя должно состоять только из латинских букв</string>
    <string name="auth_username_length_error">Имя игрока должно содержать от 2 до 17 символов.</string>
    <string name="authorization">Авторизация</string>
    <string name="available">Доступно до 3 уровня</string>
    <string name="available_out_of">Доступно %1$d/%2$d</string>
    <string name="azvoice_settings_title">Настройка AZVoice v1.1.3</string>
    <string name="back">Назад</string>
    <string name="back_keyboard">Клавиатура</string>
    <string name="bank_card_signature_filled_done">ЗАПОЛНЕНО</string>
    <string name="bank_card_signature_progress_label">Заполнено на</string>
    <string name="bank_chest_claim">ПОЛУЧИТЬ ЛАРЕЦ</string>
    <string name="bank_chest_oligarch_title">ЛАРЕЦ\nОЛИГАРХА</string>
    <string name="bank_chest_organization_title">ЛАРЕЦ\nОРГАНИЗАЦИИ</string>
    <string name="bank_currency_available_format">В банке доступно: %1$s</string>
    <string name="bank_currency_available_unlimited">В банке доступно без лимита</string>
    <string name="bank_currency_balance_format">Ваш баланс: %1$s</string>
    <string name="bank_currency_buy">Купить</string>
    <string name="bank_currency_name_alphabet">ALPHABET</string>
    <string name="bank_currency_name_amazon">AMAZON</string>
    <string name="bank_currency_name_apple">APPLE</string>
    <string name="bank_currency_name_arizona">ARIZONA (AARRP)</string>
    <string name="bank_currency_name_asc">ASC</string>
    <string name="bank_currency_name_bmw">OTCMKTS: (BMW)</string>
    <string name="bank_currency_name_btc">BTC</string>
    <string name="bank_currency_name_mercedes_benz">MERCEDES-BENZ</string>
    <string name="bank_currency_name_microsoft">MICROSOFT</string>
    <string name="bank_currency_name_nvidia">NVIDIA</string>
    <string name="bank_currency_name_sp_500">S&amp;P 500</string>
    <string name="bank_currency_name_spacex">SPACEX</string>
    <string name="bank_currency_name_tesla">TESLA</string>
    <string name="bank_currency_name_toyota">TOYOTA</string>
    <string name="bank_currency_name_vc">VC COIN</string>
    <string name="bank_currency_name_volkswagen">VOLKSWAGEN ST</string>
    <string name="bank_currency_percent_value">%1$d%%</string>
    <string name="bank_currency_range_day">1д.</string>
    <string name="bank_currency_range_month">30д.</string>
    <string name="bank_currency_range_week">7д.</string>
    <string name="bank_currency_sell">Продать</string>
    <string name="bank_currency_your_balance">Ваш баланс</string>
    <string name="bank_history_close">Закрыть</string>
    <string name="bank_history_close_icon">×</string>
    <string name="bank_history_column_amount">Сумма</string>
    <string name="bank_history_column_date">Дата и время</string>
    <string name="bank_history_column_id">ID</string>
    <string name="bank_history_column_target">От кого / кому</string>
    <string name="bank_history_column_type">Тип</string>
    <string name="bank_history_empty">Операций нет</string>
    <string name="bank_history_operation_deposit">Пополнение</string>
    <string name="bank_history_operation_indexation">Индексация</string>
    <string name="battlepass_buy_level">Купить уровень</string>
    <string name="battlepass_level_short">ур.</string>
    <string name="battlepass_pass_experience">Опыт пропуска:</string>
    <string name="battlepass_zero">0</string>
    <string name="container_get_prize_subtitle">Заберите ваши призы:</string>
    <string name="container_get_prize_title">Заберите содержимое контейнера</string>
    <string name="container_items_count_example">6 предметов</string>
    <string name="delivered">доставлено</string>
    <string name="dialog_bank_history_close">Закрыть</string>
    <string name="dialog_bank_history_close_icon">×</string>
    <string name="dialog_bank_history_column_amount">Сумма</string>
    <string name="dialog_bank_history_column_date">Дата и время</string>
    <string name="dialog_bank_history_column_id">ID</string>
    <string name="dialog_bank_history_column_target">От кого / кому</string>
    <string name="dialog_bank_history_column_type">Тип</string>
    <string name="dialog_bank_history_empty">Операций нет</string>
    <string name="dialog_bank_history_tab_all">Все</string>
    <string name="dialog_bank_history_tab_deposit">Пополнения</string>
    <string name="dialog_bank_history_tab_transfer">Переводы</string>
    <string name="dialog_bank_history_tab_withdraw">Снятия</string>
    <string name="dialog_bank_history_title">История счета</string>
    <string name="out_of_k">%1$d/%2$dk</string>
    <string name="plate_close_menu">Закрыть меню</string>
    <string name="plate_get_number">Получить номер</string>
    <string name="plate_random_number_hint">Вы можете получить случайный номер на т/с</string>
    <string name="plate_receive">Получение</string>
    <string name="plate_unknown_number">???????</string>
    <string name="plate_unknown_region">?</string>
    <string name="plate_vehicle_numbers">Автомобильных\nномеров</string>
    <string name="supply">поставка</string>
    <string name="title">title</string>
    <string name="winter_bp_pink_action_gradient">#FCB30E,#FCD85F,#FCB30E</string>
</resources>