<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/level_summary_root" android:layout_width="match_parent" android:layout_height="@dimen/_30sdp">
    <ru.mrlargha.commonui.utils.ui.CustomCardView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/_9sdp" app:backgroundMainColor="#ebe2ce" app:backgroundSecondColor="#f9f3e7" app:borderMainColor="@color/transparent100" app:borderSecondColor="#80ffffff" app:borderWidth="@dimen/_1sdp" app:corners="@dimen/_9sdp">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="@dimen/_78sdp" android:layout_height="match_parent" android:layout_marginStart="@dimen/_20sdp">
            <TextView android:textSize="@dimen/_6sdp" android:textColor="@color/winter_bp_pink_accent_orange" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battlepass_pass_experience" android:includeFontPadding="false" android:textAllCaps="true" android:fontFamily="@font/heading_now_65"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/_6sdp" android:textColor="@color/winter_bp_pink_text_muted" android:id="@+id/experience_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battlepass_zero" android:includeFontPadding="false" android:fontFamily="@font/heading_now_64_regular"/>
                <ImageView android:layout_width="@dimen/_7sdp" android:layout_height="@dimen/_7sdp" android:src="@drawable/battlepass_2025_ic_expirience" android:contentDescription="@null" android:layout_marginStart="@dimen/_2sdp"/>
            </LinearLayout>
            <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@+id/experience_progress" android:layout_width="@dimen/_72sdp" android:layout_height="@dimen/_2sdp" android:layout_marginTop="@dimen/_1sdp" android:max="20" android:progress="10" app:indicatorColor="@color/winter_bp_pink_action_highlight" app:trackColor="@color/winter_bp_pink_progress_track" app:trackCornerRadius="@dimen/_1sdp" app:trackThickness="@dimen/_2sdp"/>
        </LinearLayout>
        <ru.mrlargha.commonui.utils.ui.CustomCardView android:layout_gravity="end|center_vertical" android:id="@+id/buy_levels_button" android:layout_width="@dimen/_65sdp" android:layout_height="@dimen/_20sdp" android:layout_marginEnd="@dimen/_4sdp" app:borderMainColor="@color/winter_bp_pink_action_border" app:borderWidth="@dimen/_1sdp" app:corners="@dimen/_4sdp" app:gradientAngle="0" app:gradientList="@string/winter_bp_pink_action_gradient">
            <TextView android:textSize="@dimen/_6sdp" android:textColor="@color/winter_bp_pink_text_dark" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/battlepass_buy_level" android:maxLines="1" android:includeFontPadding="false" android:fontFamily="@font/heading_now_64_regular"/>
        </ru.mrlargha.commonui.utils.ui.CustomCardView>
    </ru.mrlargha.commonui.utils.ui.CustomCardView>
    <ImageView android:layout_width="@dimen/_28sdp" android:layout_height="match_parent" android:src="@drawable/winter_bp_pink_level_badge" android:scaleType="fitXY" android:contentDescription="@null"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="@dimen/_28sdp" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/_10sdp" android:textColor="@color/winter_bp_pink_text_dark" android:id="@+id/level_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battlepass_zero" android:includeFontPadding="false" android:fontFamily="@font/heading_now_65"/>
        <TextView android:textSize="@dimen/_5sdp" android:textColor="@color/winter_bp_pink_text_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battlepass_level_short" android:includeFontPadding="false" android:fontFamily="@font/heading_now_65"/>
    </LinearLayout>
</FrameLayout>
