<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/cgp" android:background="#20232f" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/_9sdp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/cgp_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_19sdp" android:text="@string/container_get_prize_title" android:textAllCaps="true" android:fontFamily="@font/gotham" android:textAlignment="center" android:textFontWeight="700" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:id="@+id/cgp_description_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_71sdp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/cgp_title">
        <TextView android:textSize="@dimen/_5sdp" android:textStyle="normal" android:textColor="@color/white" android:id="@+id/cgp_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/container_get_prize_subtitle" android:fontFamily="@font/gotham" android:textAlignment="center"/>
        <TextView android:textSize="@dimen/_5sdp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/cgp_bold_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/container_items_count_example" android:fontFamily="@font/gotham" android:textAlignment="center"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/cgp_exit_button" android:layout_width="@dimen/_58sdp" android:layout_height="@dimen/_18sdp" android:layout_marginTop="@dimen/_19sdp" android:src="@drawable/auction_button_exit" android:layout_marginEnd="@dimen/_26sdp" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/cc_rc_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_13sdp" android:paddingStart="@dimen/_10sdp" android:paddingEnd="@dimen/_10sdp" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:layout_constraintEnd_toEndOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cgp_description_container" app:spanCount="2"/>
</androidx.constraintlayout.widget.ConstraintLayout>
